--- a/controle-financeiro-back/src/main/resources/application.properties
+++ b/controle-financeiro-back/src/main/resources/application.properties
@@ -1,14 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/controle-financeiro?createDatabaseIfNotExist=true&useSSL=false
+spring.application.name=controle-financeiro-back
 
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/controle-financeiro
 spring.datasource.username=postgres
 spring.datasource.password=SET!@#314343
-
-spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=SELECT 1
-
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImproveNamingStrategy
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
