Criação de CRUD de tipo de gastos

--- a/controle-financeiro-back/pom.xml
+++ b/controle-financeiro-back/pom.xml
@@ -49,6 +49,12 @@
 			<artifactId>postgresql</artifactId>
 			<scope>42.5.0</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.2</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
