--- a/controle-financeiro-back/src/main/resources/application.properties
+++ b/controle-financeiro-back/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=controle-financeiro-back
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/controle-financeiro
+spring.datasource.url=jdbc:postgresql://localhost:5432/finance_db
 spring.datasource.username=postgres
 spring.datasource.password=SET!@#314343
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+springdoc.swagger-ui.path=/swagger-ui.html
